src/objects/task__c.object
<CustomObject>
    <fields>
        <fullName>parent_task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>親タスク</label>
        <referenceTo>task__c</referenceTo>
        <relationshipName>taskqFTj</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pjname__c</fullName>
        <label>関連プロジェクト</label>
        <referenceTo>pjmng__c</referenceTo>
        <relationshipLabel>工程管理</relationshipLabel>
        <relationshipName>taskDxi9</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>plan_enddate__c</fullName>
        <label>終了日（予定）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>plan_startdate__c</fullName>
        <label>開始日（予定）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>result_enddate__c</fullName>
        <label>終了日（実績）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>result_startdate__c</fullName>
        <label>開始日（実績）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>statsu__c</fullName>
        <label>ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>未着手</fullName>
                </value>
                <value>
                    <fullName>着手中</fullName>
                </value>
                <value>
                    <fullName>終了</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tanto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>担当者</label>
        <referenceTo>usermng__c</referenceTo>
        <relationshipName>task7PTE</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>工程管理</label>
    <nameField>
        <label>タスク名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>